// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Tabs -  Prop mode is required 1`] = `
<div
  className="tabs tabs-horizontal-auto"
>
  

  <i
    className="material-icons"
  >
    keyboard_arrow_right
  </i>
  <ul>
    <li
      className={null}
      key="tab-item-undefined-0"
    >
      

      <a
        href="#"
      />
      

    </li>
    <li
      className={null}
      key="tab-item-undefined-1"
    >
      

      <a
        href="#"
      />
      

    </li>
  </ul>
</div>
`;

exports[`Component: Tabs -  renders 1`] = `
<div
  className="tabs"
>
  

  <i
    className="material-icons"
  >
    keyboard_arrow_right
  </i>
  <ul>
    <li
      className={null}
      key="tab-item-undefined-0"
    >
      

      <a
        href="#"
      />
      

    </li>
    <li
      className={null}
      key="tab-item-undefined-1"
    >
      

      <a
        href="#"
      />
      

    </li>
  </ul>
</div>
`;
